## Client[0.94b] - 2015-12-28
### Added
 - Context menu buttons for entry widget clear and opening in browser
## Fixed
 - Client leave button not closing connection

## Server[0.91b] - 2015-12-28
## Fixed
 - Thread numbers in connection list were being searched instead of compared, e.g. number 4 could be found in thread 14. This caused wrong users to be dropped


## Client[0.94] - 2015-12-27
## Fixed
 - Recv thread [errno 9] bug


## Client[0.93] - 2015-12-27
### Added
 - Registration  (Plain text)
 - Password authentication (Plain text)
## Fixed
 - A warning is shown when connection to server is lost

## Server[0.91] - 2015-12-27
### Added
 - Username registration (Plain text)
 - Thread count configuration is server.cfg file


## Client[0.91t] - 2015-12-26
### Added
 - Private messages (Type @@ + "username" + space + your message)
### Changed
 - the way that userlevels get displayed

## Server[0.86t] - 2015-12-26
### Added
 - User levels
 - IP address authentification
 - Private messages


## Client[0.91] - 2015-12-26
### Added
 - Changelog toplevel window
 - Command to print all received links
### Changed
 - Increased username length to 19 to have space for duplicate renaming
### Fixed
 - text tagging bugs
 - Tkinter error when attempting to color tag text in disabled user window

## Server[0.86] - 2015-12-26
### Fixed
 - Duplica username bug
###Changed
 - Increased username length to 19 to have space for duplicate renaming